--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -91,7 +91,7 @@ body {
     padding: 0px;
     min-height: 100%;
     background-color22: #0000ff;
-    background-image: url("bg/burevestnik.jpg");
+    background-image33: url("bg/burevestnik.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
