--- a/riffshareiii/theme/colordarkgreen.css
+++ b/riffshareiii/theme/colordarkgreen.css
@@ -6,7 +6,7 @@
 	--color-shadow: #00000066;
 
     --color-background: #006600ff;
-    --color-toolbar: #334455ff;
+    --color-lines: #334455ff;
     --color-panel: #113344ff;
 
 	--color-focus: #cc0066ff;
