--- a/riffshareiii/theme/colordarkblue.css
+++ b/riffshareiii/theme/colordarkblue.css
@@ -27,8 +27,8 @@
 	--color-shadow: #00000066;
 
     --color-background: #001111ff;
-    --color-toolbar: #556677ff;
-    --color-panel: #113344ff;
+    --color-lines: #556677ff;
+    --color-panel: #224466ff;
 
 	--color-focus: #009933ff;
     --color-interactive: #cc6633ff;
