--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -101,7 +101,7 @@ body {
     width: 100%;
     height: 100%;
     min-height: 100%;
-    background-color222: var(--color-background);
+    background-color: var(--color-background);
     user-select: none;
     touch-action: manipulation;
     background-size: cover;
@@ -109,7 +109,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-color2: #00ffff;
-    background: color-mix(in lab, transparent 10%, var(--color-background))
+    background2: color-mix(in lab, transparent 10%, var(--color-background))
 }
 
 html,
