--- a/riffshareiii/theme/mixer.css
+++ b/riffshareiii/theme/mixer.css
@@ -95,8 +95,8 @@
     fill: var(--color-subtext);
 	font-size: var(--label-1cm);
 }
-.noteLine{
+.mixNoteLine{
     stroke: var(--color-text);
     stroke-linejoin: round;
-    stroke-width: calc(0.5*var(--tapSize));
+    stroke-width: calc(0.95*var(--tapSize));
 }
