--- a/riffshareiii/theme/timeselect.css
+++ b/riffshareiii/theme/timeselect.css
@@ -1,46 +1,57 @@
 .timeMeasureMark{
     fill: var(--color-panel);
+	fill-opacity: 50%;
 }
 
 .timeBarNum025 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*0.25*var(--tapSize));
     text-anchor22: start;
 }
 .timeBarNum05 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*0.5*var(--tapSize));
 }
 .timeBarNum1 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*1*var(--tapSize));
 }
 .timeBarNum2 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*2*var(--tapSize));
 }
 .timeBarNum4 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*4*var(--tapSize));
 }
 .timeBarNum8 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*8*var(--tapSize));
 }
 .timeBarNum16 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*16*var(--tapSize));
 }
 .timeBarNum32 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*32*var(--tapSize));
 }
 .timeBarNum64 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*64*var(--tapSize));
 }
 .timeBarNum128 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(2*128*var(--tapSize));
 }
 
@@ -52,52 +63,62 @@
 
 
 .timeBarInfo025 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*0.25*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo05 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*0.5*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo1 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*1*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo2 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*2*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo4 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*4*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo8 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*8*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo16 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*16*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo32 {
-    fill: var(--color-lines);
+    fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*32*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo64 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*64*var(--tapSize));
     text-anchor2: end;
 }
 .timeBarInfo128 {
-    fill: var(--color-lines);
+	fill: var(--color-panel);
+	fill-opacity: 90%;
     font-size: calc(1*128*var(--tapSize));
     text-anchor2: end;
 }
