--- a/riffshareiii/theme/menu.css
+++ b/riffshareiii/theme/menu.css
@@ -10,6 +10,7 @@
 .rightMenuFocusedDelimiter {
     fill: var(--color-focus);
     pointer-events: none;
+    animation: focusFlashFill 4s linear infinite;
 }
 
 .rightMenuLabel {
