--- a/riffshareiii/theme/base.css
+++ b/riffshareiii/theme/base.css
@@ -67,6 +67,13 @@
     display: none;
 }
 
+@keyframes focusFlashFill {
+    0% {fill:var(--color-focus)}
+    74% {fill:var(--color-focus)}
+    75% {fill:var(--color-interactive)}
+    100% {fill:var(--color-focus)}
+}
+
 html {
     width: 100%;
     height: 100%;
