--- a/riffshareiii/theme/mixer.css
+++ b/riffshareiii/theme/mixer.css
@@ -109,6 +109,10 @@
 	stroke-opacity: 15%;
 }
 
+.mixTimeMeasureMark{
+    fill: var(--color-lines);
+	fill-opacity: 25%;
+}
 
 .mixFiller1{
     fill: var(--color-text);
