--- a/riffshareiii/theme/timeselect.css
+++ b/riffshareiii/theme/timeselect.css
@@ -2,6 +2,11 @@
     fill: var(--color-lines);
 	fill-opacity: 25%;
 }
+.timeSelection{
+    fill: var(--color-focus);
+	fill-opacity: 95%;
+	
+}
 .timeSubMark{
     fill: var(--color-lines);
 	fill-opacity: 25%;
@@ -21,51 +26,61 @@
 	fill-opacity: 90%;
     font-size: calc(0.25*var(--tapSize));
     text-anchor22: start;
+	pointer-events: none;
 }
 .timeBarNum05 {
 	fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(0.5*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum1 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(1*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum2 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(2*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum4 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(4*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum8 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(8*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum16 {
 	fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(16*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum32 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(32*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum64 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(64*var(--tapSize));
+	pointer-events: none;
 }
 .timeBarNum128 {
     fill: var(--color-lines);
 	fill-opacity: 90%;
     font-size: calc(128*var(--tapSize));
+	pointer-events: none;
 }
 
 
