--- a/riffshareiii/theme/mixer.css
+++ b/riffshareiii/theme/mixer.css
@@ -88,7 +88,7 @@
     fill-opacity:0;
 }
 */
-.projectTitle {
+.projectTitle222222 {
     fill: var(--color-subtext);
 	font-size: var(--label-4cm);
 }
