--- a/riffshareiii/theme/mixer.css
+++ b/riffshareiii/theme/mixer.css
@@ -233,3 +233,37 @@
 	fill-opacity:50%;
     stroke: none;
 }
+
+
+.commentLineText025 {
+    fill: var(--color-lines);
+    font-size: calc(0.25*var(--tapSize));
+	pointer-events: none;
+}
+.commentLineText05 {
+    fill: var(--color-lines);
+    font-size: calc(0.5*var(--tapSize));
+	pointer-events: none;
+}
+.commentLineText1 {
+    fill: var(--color-lines);
+    font-size: calc(1*var(--tapSize));
+	pointer-events: none;
+}
+.commentLineText2 {
+    fill: var(--color-lines);
+    font-size: calc(1*var(--tapSize));
+	pointer-events: none;
+}
+.commentLineText4 {
+    fill: var(--color-lines);
+    font-size: calc(2*var(--tapSize));
+	pointer-events: none;
+}
+.commentLineText8 {
+    fill: var(--color-lines);
+    font-size: calc(2*var(--tapSize));
+	pointer-events: none;
+}
+
+
