--- a/riffshareiii/theme/colordarkblue.css
+++ b/riffshareiii/theme/colordarkblue.css
@@ -35,5 +35,6 @@
 }
 
 #pagediv {
-    background-image: url("bg/burevestnik.jpg");
+    background-image22: url("bg/burevestnik.jpg");
+    background-image: url("bg/blue.jpg");
 }
