--- a/riffshareiii/theme/leftbar.css
+++ b/riffshareiii/theme/leftbar.css
@@ -197,19 +197,44 @@
 .samplerRowLabel05 {
     fill: var(--color-lines);
 	fill-opacity: 50%;
-    font-size: calc(3*0.125*var(--tapSize));
+    font-size: calc(4*0.125*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel1 {
     fill: var(--color-lines);
 	fill-opacity: 50%;
-    font-size: calc(4*0.125*var(--tapSize));
+    font-size: calc(6*0.125*var(--tapSize));
 	pointer-events: none;
 }
 .samplerRowLabel2 {
     fill: var(--color-lines);
 	fill-opacity: 50%;
-    font-size: calc(5*0.125*var(--tapSize));
+    font-size: calc(8*0.125*var(--tapSize));
+	pointer-events: none;
+}
+
+.autoRowLabel025 {
+    fill: var(--color-lines);
+	fill-opacity: 50%;
+    font-size: calc(2*0.125*var(--tapSize));
+	pointer-events: none;
+}
+.autoRowLabel05 {
+    fill: var(--color-lines);
+	fill-opacity: 50%;
+    font-size: calc(4*0.125*var(--tapSize));
+	pointer-events: none;
+}
+.autoRowLabel1 {
+    fill: var(--color-lines);
+	fill-opacity: 50%;
+    font-size: calc(6*0.125*var(--tapSize));
+	pointer-events: none;
+}
+.autoRowLabel2 {
+    fill: var(--color-lines);
+	fill-opacity: 50%;
+    font-size: calc(8*0.125*var(--tapSize));
 	pointer-events: none;
 }
 
